# apertium-kir

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  Makefile.am  README  README.md  apertium-kir.kir-seg-prefix.lsx  apertium-kir.kir-seg.twol  apertium-kir.kir.lexc  apertium-kir.kir.rlx  apertium-kir.kir.twoc  apertium-kir.kir.twol  apertium-kir.kir.udx  apertium-kir.pc.in  apertium-kir.post-kir.dix  apertium-tr-ky.ky.lexc  configure.ac  kir.autogen.hfst  kir.automorf.hfst  kir.prob  kir_cc19  modes.xml
.circleci/: config.yml  cov.sh
corpora/: Makefile  Manas-UdS_aa.dep  Manas-UdS_aa_a.dep  Manas-UdS_aa_a.seg  Manas-UdS_ai.dep  Manas-UdS_an.dep  Manas-UdS_azn.dep  Manas-UdS_ck.dep  Manas-UdS_ky.dep  Manas-UdS_mt.dep  Manas-UdS_st.dep  Manas-UdS_zm.dep  Manas-UdS_zm.seg  add_morph.py  apertium-regtest-hashifyCG.py  dep_to_seg.py  proverbs.dep  proverbs.seg  udtw23-kir.dep  udtw23-kir.seg
dev/: countstems.sh  evaluate-morph.py  gloss.py  rferl.random.1000.txt  rferl.random.someforms_corrected.txt
dev/ortho/: Makefile  cyr-ara.lexc  cyr-ara.twol  cyr-ipa.lexc  cyr-ipa.twol  cyr-lat.lexc  cyr-lat.twol  kir-CYR.spellrelax.twol
eval/: Makefile  README  evaluate-morph.py  ref.1000.txt  ref.2014.txt  src.1000.txt  src.2014.txt  tst.1000.txt.2014-06-19.12:06
paper/: Makefile  TODO  abstract.tex  lrec2006.sty  lrec2012.bst  lrec2012.sty  paper.bib  paper.tex
paper/poster/: Makefile  OUTLINE  TODO  paper.bib  poster.tex
scripts/: conllise.py
speller/: editdist.default.txt  index.xml  strings.default.txt
test/: abbreviations-gen-generator-expected.txt  abbreviations-gen-generator-gold.txt  abbreviations-gen-input.txt  abbreviations-input.txt  abbreviations-morph-expected.txt  abbreviations-morph-gold.txt  kir-proverbs-disam-gold.txt  kir-proverbs-disam-input.txt  ky-adjectives-gen-generator-expected.txt  ky-adjectives-gen-generator-gold.txt  ky-adjectives-gen-input.txt  ky-adjectives-input.txt  ky-adjectives-morph-expected.txt  ky-adjectives-morph-gold.txt  ky-causpass-gen-generator-expected.txt  ky-causpass-gen-generator-gold.txt  ky-causpass-gen-input.txt  ky-causpass-input.txt  ky-causpass-morph-expected.txt  ky-causpass-morph-gold.txt  ky-jnw-gen-generator-expected.txt  ky-jnw-gen-generator-gold.txt  ky-jnw-gen-input.txt  ky-jnw-input.txt  ky-jnw-morph-expected.txt  ky-jnw-morph-gold.txt  ky-nouns-gen-generator-expected.txt  ky-nouns-gen-generator-gold.txt  ky-nouns-gen-input.txt  ky-nouns-input.txt  ky-nouns-morph-expected.txt  ky-nouns-morph-gold.txt  ky-nounsspecial-gen-generator-expected.txt  ky-nounsspecial-gen-generator-gold.txt  ky-nounsspecial-gen-input.txt  ky-nounsspecial-input.txt  ky-nounsspecial-morph-expected.txt  ky-nounsspecial-morph-gold.txt  ky-numbers-gen-generator-expected.txt  ky-numbers-gen-generator-gold.txt  (+61 more)
tests/: HfstTester.py  README  abbreviations.yaml  ky-adjectives.yaml  ky-causpass.yaml  ky-jnw.yaml  ky-nouns.yaml  ky-nounsspecial.yaml  ky-numbers.yaml  ky-pronouns.yaml  ky-uu.yaml  ky-verbs.pairtest  ky-verbs.yaml  ky-verbs2.yaml  ky-verbs3pl.yaml  ky-verbsaux.yaml  ky-verbsimp.yaml  ky-verbsopt.yaml  multi.yaml  run-tests.sh
tests/morphophonology/: test.py
texts/: proverbs.txt
